ThreadCritical crashes on Solaris if used between os::init and os::init_2

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • b31

      ThreadCritical::initialize is called from os::init, before that the acual mutex calls are short-circuited on Solaris.

      If ThreadCritical is used after the call to initialize but before os::init_2 then os::Solaris::_mutex_lock is still uninitialized and we crash.

            Assignee:
            Mikael Gerdin (Inactive)
            Reporter:
            Mikael Gerdin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: