8187040: ThreadCritical crashes on Solaris if used between os::init and os::init_2

Reviewed-by: dholmes, stuefe